@@ -23,6 +23,7 @@ Version 2.4.0
   + Add hwloc/cpukinds.h for reporting information about hybrid CPUs.
     - Use Linux cpufreq frequencies to rank cores by efficiency.
     - Use x86 CPUID hybrid leaf to identify Intel Atom and Core cores.
+    - Use the Windows native EfficiencyClass to separate kinds.
 * Backends
   + Properly handle Linux kernel 5.10+ exposing ACPI HMAT information
     with knowledge of Generic Initiators.
